Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17948

error: 'struct inode' has no member named 'i_mtime'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      While building Ubuntu 24.04 on master branch, it failed as follows:

      /root/lustre-release/lustre/llite/pcc.c: In function 'pcc_try_readonly_open_attach':
      /root/lustre-release/lustre/llite/pcc.c:1691:32: error: 'struct inode' has no member named 'i_mtime'; did you mean '__i_mtime'?
       1691 |         item.pm_mtime = inode->i_mtime.tv_sec;
            |                                ^~~~~~~
            |                                __i_mtime
      

      The issue was introduced by the following commit:

      commit 3835f4d31e6f0cad8a9fca989f056dde018a1f06
      Author:     Qian Yingjin <qian@ddn.com>
      AuthorDate: Thu Aug 6 16:29:21 2020 +0800
      Commit:     Oleg Drokin <green@whamcloud.com>
      CommitDate: Wed Jun 5 04:48:06 2024 +0000
      
          LU-13881 pcc: comparator support for PCC rules
      

            yujian Jian Yu
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: